--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "pixi.js": "^8.4.1"
   }
 }
